syntax = "proto3";

package getshorturl;

option go_package = "./getshorturl";

service GetShortUrl {
  rpc GetShortUrl (GetShortUrlRequest) returns (GetShortUrlResponse) {}
}

message GetShortUrlRequest {
  string shorturl = 1;
}

message GetShortUrlResponse {
  string url = 1;
  int32 statusCode = 2;
  string statusDesc = 3;
}